// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="pr-block-rich-text  __block-unique-id"
>
  <h
    id="title"
  >
    Title
  </h>
  

  <h
    id="subtitle"
  >
    Subtitle
  </h>
  

  <p>
    Some content with 
    <a>
      HTML
    </a>
  </p>
  

</div>
`;

exports[`should render without crashing 1`] = `
<div
  className="pr-block-rich-text  __block-unique-id"
>
  <div>
    <a
      div=""
    />
  </div>
</div>
`;

exports[`should render without markdown 1`] = `
<div
  className="pr-block-rich-text  __block-unique-id"
>
  hello world
</div>
`;
